--- a/5. Homework_Payyed/payyedstyle.css
+++ b/5. Homework_Payyed/payyedstyle.css
@@ -9,7 +9,8 @@ html, body{
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+
 }
 .leftChild{
     width: 50vw;
@@ -25,34 +26,27 @@ html, body{
 }
 
 .img-color{
-    background-color: #2dbe60;
+    background-color:  #2dbe60;
     opacity: 0.8;
     z-index: 1;
     height: 100vh;
     width: 50vw;
 }
 
-.img-color{
-    /* display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center; */
-
-
-}
-
 .text {
-    padding-top: 35%;
-    padding-left: 20%;
-    color: #fff;
-    font-family: "Rubik", sans-serif;;
-    font-size: 2rem
+    padding-top: 280px;
+    padding-left: 13%;
+    color: #fff!important;
+    font-family: "Rubik", sans-serif;
+    font-size: 23px;
+    opacity: 100;
 }
 
 .text p{
-    color: #fff;
+    color: #fff!important;
     font-family: "Rubik", sans-serif;;
-    font-size: 1.2rem
+    font-size: 18px !important;
+ 
 }
 
 .text{
@@ -61,8 +55,94 @@ html, body{
 
 .logo{
     
-    justify-self: start;
-    display: flex;
-    padding-top: 10px;
-    padding-left: 20%;
+   width: 120px;
+   padding-top: 50px;
+   padding-left: 13%;
+}
+
+.rightChild{
+    background-color: #f4f9f9;
+    width: 50%;
+    height: 100%;
+}
+
+.row{
+    color: #4c4d4d;
+    font-family: "Rubik", sans-serif;
+    font-size: 14px;
+    line-height: 22px;
+    width: 60%;
+    margin: auto;
+    padding-top: 200px
+}
+
+h3{
+    font-weight: 400;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+
+.form{
+    padding: 0;
+    margin: 0;
+    display: inline;
+}
+
+.form-group{
+    margin-bottom: 1rem
+}
+
+label{
+    display: inline-block;
+    margin-bottom: .5rem;
+}
+
+.form-control{
+    padding: 15px 0px 15px 0px;   
+    height: inherit;
+    border-color: #dae1e3;
+    font-size: 16px;
+    width: 100%;
+    font-weight: 400;
+    line-height: 1.5;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    overflow: hidden
+}
+:placeholder-shown{
+    padding-left: 10px;
+    box-sizing: border-box;
+}
+
+.mainBtn{
+    margin-top: 10px;
+    padding: .8rem 2rem; 
+    width: 100%; 
+    background-color: #2dbe60;
+    border: #2dbe60;
+    padding: 15px 0px 15px 0px;   
+    font-weight: 500;
+    transition: all 0.5s ease;
+    text-align: center;
+    color: #fff;
+    vertical-align: middle;
+    font-size: 1rem;
+    border-radius: .25rem;
+}
+
+.row p{
+    color: #8e9a9d;
+    font-size: 1rem;
+    text-align: center;
+    box-sizing: border-box;
+    font-weight: 400;
+
+}
+
+.row a{
+    color: #2dbe60;
+    text-decoration: none;
 }
